<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:visibility="gone"
        android:background="@drawable/bottom_line"
        tools:ignore="UselessParent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/colorTextDeep"
            android:text="编&#12288;&#12288;号"
            android:textSize="@dimen/large_txt"
            android:id="@+id/number_tv_ten"
            android:layout_marginStart="10dp"
            tools:ignore="HardcodedText" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:paddingStart="0dp"
            android:paddingEnd="15dp"
            android:maxLines="2"
            android:gravity="end"
            android:textSize="@dimen/large_txt"
            android:ellipsize="end"
            android:id="@+id/number_tv"
            android:layout_toEndOf="@+id/number_tv_ten"
            android:textColor="@color/colorTextDeep"
            tools:ignore="HardcodedText" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bottom_line"
        tools:ignore="UselessParent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/colorTextDeep"
            android:text="@string/deal_number"
            android:drawableStart="@drawable/pg_must"
            android:textSize="@dimen/large_txt"
            android:id="@+id/number_tv_one"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:paddingStart="0dp"
            android:paddingEnd="15dp"
            android:maxLines="2"
            android:hint="请输入采伐序号"
            android:background="@null"
            android:inputType="number"
            android:gravity="end"
            android:textSize="@dimen/large_txt"
            android:ellipsize="end"
            android:id="@+id/number_et"
            android:layout_toEndOf="@+id/number_tv_one"
            android:textColor="@color/colorTextDeep"
            tools:ignore="HardcodedText" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/bottom_line"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/colorTextDeep"
            android:text="@string/deal_type"
            android:drawableStart="@drawable/pg_must"
            android:textSize="@dimen/large_txt"
            android:id="@+id/number_tv_two"
            tools:ignore="RelativeOverlap" />
        <Spinner
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical|end"
            android:id="@+id/deal_spinner"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/bottom_line"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/colorTextDeep"
            android:text="@string/village"
            android:drawableStart="@drawable/pg_must"
            android:textSize="@dimen/large_txt"
            android:id="@+id/number_tv_three"
            tools:ignore="RelativeOverlap" />
        <Spinner
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical|end"
            android:id="@+id/village_spinner"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/bottom_line"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/colorTextDeep"
            android:text="@string/group"
            android:textSize="@dimen/large_txt"
            android:drawableStart="@drawable/pg_must"
            android:id="@+id/number_tv_four"
            tools:ignore="RelativeOverlap" />
      <EditText
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_alignParentEnd="true"
          android:layout_toEndOf="@id/number_tv_four"
          android:gravity="end|center_vertical"
          android:id="@+id/group_et"
          android:inputType="number"
          android:paddingEnd="15dp"
          android:paddingStart="0dp"
          android:background="@null"
          android:textSize="@dimen/large_txt"
          android:hint="@string/please_input_group_number"
          />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bottom_line"
        tools:ignore="UselessParent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/colorTextDeep"
            android:text="@string/little_address"
            android:textSize="@dimen/large_txt"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_marginStart="2dp"
            android:id="@+id/number_tv_five"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:paddingStart="0dp"
            android:paddingEnd="15dp"
            android:maxLines="2"
            android:gravity="end"
            android:background="@null"
            android:hint="请输入小地名"
            android:inputType="text"
            android:textSize="@dimen/large_txt"
            android:ellipsize="end"
            android:id="@+id/address_et"
            android:layout_toEndOf="@+id/number_tv_five"
            android:textColor="@color/colorTextDeep"
            tools:ignore="HardcodedText" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/lightlightgrey"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bottom_line"
        tools:ignore="UselessParent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/colorTextDeep"
            android:text="@string/radius"
            android:textSize="@dimen/large_txt"
            android:id="@+id/number_tv_six"
            android:drawableStart="@drawable/pg_must"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/number_tv_six"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:id="@+id/radius_et"
                android:inputType="numberDecimal"
                android:gravity="end|center_vertical"
                android:hint="@string/please_input_radius"
                android:paddingEnd="5dp"
                android:paddingStart="0dp"
                android:layout_toStartOf="@id/limi_tv"
                android:textSize="@dimen/large_txt"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/large_txt"
                android:text="@string/limi"
                android:layout_centerVertical="true"
                android:id="@+id/limi_tv"
                android:layout_marginEnd="15dp"
                android:layout_alignParentEnd="true"
                />
        </RelativeLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:background="@drawable/bottom_line"
        android:paddingBottom="10dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/large_txt"
                android:text="@string/around_photo"
                android:drawableStart="@drawable/pg_must"
                android:textColor="@color/colorTextDeep"
                />

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:id="@+id/around_layout"
                android:background="@drawable/photo_back"
                android:layout_height="60dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/pg_take_photo"
                    android:contentDescription="@null"
                    />
            </RelativeLayout>
            <ImageView
                android:layout_width="150dp"
                android:layout_marginTop="5dp"
                android:id="@+id/around_iv"
                android:visibility="gone"
                android:contentDescription="@null"
                android:layout_height="150dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/large_txt"
                android:text="@string/number_photo"
                android:drawableStart="@drawable/pg_must"
                android:textColor="@color/colorTextDeep"
                />

            <RelativeLayout
                android:layout_width="60dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="20dp"
                android:id="@+id/number_layout"
                android:background="@drawable/photo_back"
                android:layout_height="60dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/pg_take_photo"
                    android:contentDescription="@null"
                    />
            </RelativeLayout>
            <ImageView
                android:layout_width="150dp"
                android:layout_marginTop="5dp"
                android:id="@+id/number_iv"
                android:visibility="gone"
                android:contentDescription="@null"
                android:layout_height="150dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>