<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bottom_line"
        tools:ignore="UselessParent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/colorTextDeep"
            android:text="@string/deal_time"
            android:textSize="@dimen/large_txt"
            android:id="@+id/second_number_tv_one"
            android:layout_marginStart="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:paddingStart="0dp"
            android:paddingEnd="15dp"
            android:maxLines="2"
            android:gravity="end"
            android:textSize="@dimen/large_txt"
            android:ellipsize="end"
            android:id="@+id/time_tv"
            android:layout_toEndOf="@id/second_number_tv_one"
            android:textColor="@color/colorTextDeep"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bottom_line"
        tools:ignore="UselessParent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/colorTextDeep"
            android:text="@string/own_town"
            android:textSize="@dimen/large_txt"
            android:id="@+id/second_number_tv_two"
            android:layout_marginStart="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:paddingStart="0dp"
            android:paddingEnd="15dp"
            android:maxLines="2"
            android:gravity="end"
            android:textSize="@dimen/large_txt"
            android:ellipsize="end"
            android:id="@+id/town_tv"
            android:layout_toEndOf="@+id/second_number_tv_two"
            android:textColor="@color/colorTextDeep"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bottom_line"
        tools:ignore="UselessParent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/colorTextDeep"
            android:text="@string/deal_worker"
            android:textSize="@dimen/large_txt"
            android:id="@+id/second_number_tv_three"
            android:layout_marginStart="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:paddingStart="0dp"
            android:paddingEnd="15dp"
            android:maxLines="2"
            android:gravity="end"
            android:textSize="@dimen/large_txt"
            android:ellipsize="end"
            android:id="@+id/worker_tv"
            android:layout_toEndOf="@+id/second_number_tv_three"
            android:textColor="@color/colorTextDeep"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/bottom_line"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/colorTextDeep"
            android:text="植物名称"
            android:textSize="@dimen/large_txt"
            android:id="@+id/number_tv_eleven"
            android:layout_marginStart="10dp"
            tools:ignore="RelativeOverlap" />
        <Spinner
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical|end"
            android:id="@+id/zhiwu_spinner"
            />
    </RelativeLayout>

</LinearLayout>